# ghsh

./: .gitignore  Cargo.toml  README.md  build.rs
src/: chart.rs  github.rs  main.rs  tui.rs
src/github/: client.rs  query.graphql  query.rs  scalar.rs
src/github/graphql/: query.graphql
